--- a/style.css
+++ b/style.css
@@ -6,10 +6,26 @@
 body {
     font-family: Scriptin, sans-serif;
     background: rgb(235, 235, 126);
+    text-align: center;
 }
 
 p {
     font-size: 30px;
+}
+
+h1 {
+    text-decoration: underline;
+}
+
+.button,
+#button,
+#rainbow {
+    font-family: Scriptin, sans-serif;
+    background: #04AA6D;
+    color: black;
+    border-radius: 5px;
+    font-size: 20px;
+    padding: 15px;
 }
 
 .slidecontainer {
@@ -53,8 +69,10 @@ p {
   }
 
   #grid {
+    margin-top: 50px;
+    margin-left: 30%;
     display: grid;
-    width: 70%;
+    width: 40%;
     height: 70%;
     position: absolute;
     background-color: white;
